# components-skeleton

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake-helpers/: CMakeLists.txt
cmake-helpers/cmake/: cmake-helpers.cmake
common-cmake-modules/: CMakeLists.txt  config.cmake.in
common-cmake-modules/modules/: module1.cmake
componentA/: CMakeLists.txt  README.md  componentA.cpp
componentA/conf/: componentA.conf
componentA/tests/: featureA-Tests.cpp
componentB/: CMakeLists.txt  README.md  componentB.cpp
componentB/conf/: componentB.conf
componentB/include/componentB/: componentB.h
componentB/tests/: CMakeLists.txt  featureB-Tests.cpp
